not even sure what this is

--- a/ICT4300_webapp_build/ICT4300_webapp.html
+++ b/ICT4300_webapp_build/ICT4300_webapp.html
@@ -33,6 +33,7 @@
             <a href="#about">About</a>
             <a href="#contact">Contact</a>
             <input type="text" placeholder="Search..">
+            <button onclick = "getBooks()">Go</button><br>
         <div class ="openNavElement">
           <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
           <!-- Use any element to open the sidenav -->
