--- a/ICT4300_webapp_build/apiCallFollow.html
+++ b/ICT4300_webapp_build/apiCallFollow.html
@@ -10,7 +10,13 @@
 
 <script src="apiCallFollow.js">
 </script>
-<input id = "input">
-<button onclick = "getBooks()">Get books</button><br>
+<input type = "text" id = "myInput" placeholder="Search..">
+<button id = "mySearch" onclick = "getBooks()">Search</button><br>
 <div id = "output"></div>
 <!-- https://www.youtube.com/watch?v=LNKuZBYpl4o -->
+
+<!-- <fieldset id="LinkList">
+    <input type="text" id="addLinks" name="addLinks" placeholder="Search..">
+    <input type="button" id="linkadd" name="linkadd" value="add">
+</fieldset>
+<div id = "output"></div> -->
