still working on the enter button thing

--- a/ICT4300_webapp_build/apiCallFollow.html
+++ b/ICT4300_webapp_build/apiCallFollow.html
@@ -8,11 +8,15 @@
     <link rel="stylesheet" href="apiCallFollow.css">
 </head>
 
-<script src="apiCallFollow.js">
+<script src="apiCallFollow.js" defer>
 </script>
+
+<body>
 <input type = "text" id = "myInput" placeholder="Search..">
 <button id = "mySearch" onclick = "getBooks()">Search</button><br>
 <div id = "output"></div>
+
+</body>
 <!-- https://www.youtube.com/watch?v=LNKuZBYpl4o -->
 
 <!-- <fieldset id="LinkList">
