--- a/ICT4300_webapp_build/about.html
+++ b/ICT4300_webapp_build/about.html
@@ -38,7 +38,7 @@
                 redirect: 'follow'
             };
             // make API call with parameters and use promises to get response
-            fetch("YOUR-API-INVOKE-URL", requestOptions)
+            fetch("https://vdhzw7agbb.execute-api.us-west-1.amazonaws.com/firstStage", requestOptions)
             .then(response => response.text())
             .then(result => alert(JSON.parse(result).message))
             .catch(error => console.log('error', error));
