Just did some cleaning up for submittal

--- a/ICT4300_webapp_build/catalog.html
+++ b/ICT4300_webapp_build/catalog.html
@@ -50,7 +50,7 @@
       
         <ul class="left">
           <div id = "output"></div>
-            <p id = "boxTitle">Catalog still being built</p>  
+            <p id = "boxTitle">Catalog still being built. To use Search function please go back to the homepage.</p>  
             <img id="wip" src="https://thumbs.gfycat.com/NegativeFearfulAdamsstaghornedbeetle-max-1mb.gif"> 
            
           </ul>
