--- a/ICT4007/week6_classwork.html
+++ b/ICT4007/week6_classwork.html
@@ -6,6 +6,16 @@
     <h1>Just a random number displayed</h1>
     <button id = "mySearch" onclick = "randomNumber()">Print a random number</button><br>
     <p id="output">output</p>
-
+    
+    <label for="weather">Select the weather type today: </label>
+    <select id="weather">
+      <option value="">--Make a choice--</option>
+      <option value="sunny">Sunny</option>
+      <option value="rainy">Rainy</option>
+      <option value="snowing">Snowing</option>
+      <option value="overcast">Overcast</option>
+    </select>
+    
+    <p></p>
 
 </body>
