one last update turning it in for real

--- a/ICT4007/Week7_assignment.html
+++ b/ICT4007/Week7_assignment.html
@@ -3,9 +3,9 @@
 
 </head>
 <body>
-<h1>Classic Cars</h1>
+<h1>Vintage Legends Of The Road: The 21 Best Classic Cars For Collectors</h1>
 <h2>Cars to drive before you die.</h2>
-<a href = "https://luxe.digital/lifestyle/cars/best-classic-cars/"> Brought to you by Luxe Digital</a><br>
+<a href = "https://luxe.digital/lifestyle/cars/best-classic-cars/"> Information from Luxe Digital</a><br><br>
 <select id="era" >;
   <option value = "" >--Choose an Era--</option>;
   <option value = "All" >All</option>;
