--- a/ICT4300_webapp_build/home.html
+++ b/ICT4300_webapp_build/home.html
@@ -30,6 +30,7 @@
       </div>       
       <div class="topnav">
             <a class="active" href="home.html">Home</a>
+            <a href="about.html">Login</a>
             <a href="about.html">About</a>
             <a href="#contact">Contact</a>
             <button type= "button" id = "mySearch" onclick = "getBooks()">Search</button>
